--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "license": "MIT",
+{
+  "license": "MIT",
   "scripts": {
     "build": "rm -rf docs && cp -R dist docs",
     "test": "jest"
@@ -6,5 +7,8 @@
   "dependencies": {
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
